--- a/assets/scss/_variables_project.scss
+++ b/assets/scss/_variables_project.scss
@@ -27,10 +27,9 @@ $medium_smoky_grey: #CCCDD1;
 $light_white: #e2e2e2;
 $mid_gray: #979797;
 
-$site_horizontal_padding: 100px;
 
 @mixin desktop {
-  @media screen and (min-width: 1040px) { @content; }
+  @media screen and (min-width: 920px) { @content; }
 }
 
 @mixin full-nav-menu-desktop {
@@ -38,43 +37,14 @@ $site_horizontal_padding: 100px;
 }
 
 @mixin max-width-desktop {
-  @media screen and (min-width: 1240px) { @content; }
+  @media screen and (min-width: 1540px) { @content; }
 }
 
 @mixin small-desktop {
-  @media (min-width: 1040px) and (max-width: 1239px) { @content; }
+  @media (min-width: 920px) and (max-width: 1539px) { @content; }
 }
-
 @function rem($px) {
   @return ($px / 16px) * 1rem;
 }
 
 
-@mixin clearfix {
-  &:before,
-  &:after {
-    content: "";
-    display: table;
-  }
-  &:after {
-    clear: both;
-  }
-  & {
-    *zoom: 1;
-  }
-}
-
-@mixin default_link_styles {
-  a:link,
-  a:visited,
-  a:hover {
-    color: $orange;
-    text-decoration: none;
-  }
-
-  @include desktop {
-    a:hover {
-      text-decoration: underline;
-    }
-  }
-}
